apps/web/app/globals.css
/*============================= Global Variables =============================*/

:root {
	--color-primary: #59b800;
	--color-primary-background: #59b80010;
	--color-secondary: #f1f1f1;
	--color-foreground: #ffffff;
	--color-background: #fbfbfb;
	--color-text: #000000;
	--color-border: #e6e6e6;
	--color-border-hover: #bfbfbf;

	--foreground-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);

	--font-size-xl: 28px;
	--font-size-large: 24px;
	--font-size-medium: 18px;
	--font-size-small: 16px;

	--border-radius: 6px;

	font-size: var(--font-size-medium);
	color: var(--color-text);
	background-color: var(--color-background);
}

@media (prefers-color-scheme: dark) {
	:root {
		--color-primary: #9fff46;
		--color-primary-background: #9fff4610;
		--color-secondary: #1a1a1a;
		--color-foreground: #101010;
		--color-background: #0d0d0d;
		--color-text: #ffffff;
		--color-border: #1f1f1f;
		--color-border-hover: #555555;
		--foreground-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
	}
}

/*================================ CSS Reset ================================*/

/* Sourced from https://piccalil.li/blog/a-more-modern-css-reset/ */

/* Box sizing rules */
*,
*::before,
*::after {
	box-sizing: border-box;
}

/* Prevent font size inflation */
html {
	-moz-text-size-adjust: none;
	-webkit-text-size-adjust: none;
	text-size-adjust: none;
}

/* Remove default margin in favour of better control in authored CSS */
body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
	margin: 0;
	margin-block-end: 0;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role="list"],
ol[role="list"] {
	list-style: none;
}

/* Set core body defaults */
body {
	min-height: 100vh;
	line-height: 1.5;
}

/* Set shorter line heights on headings and interactive elements */
h1,
h2,
h3,
h4,
button,
input,
label {
	line-height: 1.1;
}

/* Balance text wrapping on headings */
h1,
h2,
h3,
h4 {
	text-wrap: balance;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
	text-decoration-skip-ink: auto;
	color: currentColor;
}

/* Make images easier to work with */
img,
picture {
	max-width: 100%;
	display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
	font-family: inherit;
	font-size: inherit;
}

/* Make sure textareas without a rows attribute are not tiny */
textarea:not([rows]) {
	min-height: 10em;
}

/* Anything that has been anchored to should have extra scroll margin */
:target {
	scroll-margin-block: 5ex;
}

